--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name=" viewport" content=" width= device-width, initial-scale=1.0">
-        <title> Digital Clock Using JavaScript - Easy Tutorials</title>
+        <title> JAM DIGITAL</title>
         <link rel=" stylesheet" href="style.css">
     </head>
     <body>
